--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="eng">
 <head>
-    <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Todo List</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-<table>
-    <tr>
-        <td>id</td>
-        <td>task</td>
-        <td>description</td>
-        <td>isDone</td>
-        <td>createdAt</td>
-    </tr>
-    <tr th:each="todo : ${todoList}">
-        <td th:text="${todo.id}">1</td>
-        <td th:text="${todo.task}">John</td>
-        <td th:text="${todo.description}">John</td>
-        <td th:text="${todo.isDone}">John</td>
-        <td th:text="${todo.createdAt}">30</td>
-    </tr>
-</table>
+<div class="container mx-auto my-10">
+    <div class="flex justify-between">
+        <h1 class="text-3xl">Todo List</h1>
+        <div class="flex gap-5">
+            <form action="/todo/search" class="flex justify-center">
+                <label class="input input-bordered flex items-center gap-2 rounded-r-none">
+                    <input type="text" name="task" class="grow" placeholder="Search For Task"/>
+                </label>
+                <label class="input input-bordered flex items-center gap-2 rounded-r-none">
+                    <input type="text" name="isDone" class="grow" placeholder="Search For isDone"/>
+                </label>
+                <button type="submit" class="w-[50px] h-full bg-blue-500 px-4 py-2 rounded-sm">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
+                         class="w-4 h-4 opacity-70 ">
+                        <path fill-rule="evenodd"
+                              d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                              clip-rule="evenodd"/>
+                    </svg>
+                </button>
+            </form>
+            <a href="/todo/add" class="btn btn-primary">Add New Todo</a>
+        </div>
+    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Task</th>
+            <th>Description</th>
+            <th>Is Done</th>
+            <th>Created at</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="todo : ${todoList}">
+            <td th:text="${todo.id}"></td>
+            <td th:text="${todo.task}"></td>
+            <td th:text="${todo.description}"></td>
+            <td th:text="${todo.isDone}"></td>
+            <td th:text="${todo.createdAt}"></td>
+            <td><a th:href="@{/todo/edit/{id}(id=${todo.id})}" class="btn btn-success">Edit</a></td>
+            <td><a th:href="@{/todo/delete/{id}(id=${todo.id})}" class="btn btn-error ">Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 </body>
 </html>
