fix: add isDone field

--- a/src/main/resources/templates/addTodo.html
+++ b/src/main/resources/templates/addTodo.html
@@ -34,7 +34,7 @@
                     <label for="isDone" class="block mb-2 text-sm">
                         Is Done
                     </label>
-                    <select id="isDone" class="select select-bordered w-full max-w-xs">
+                    <select id="isDone" name="isDone" class="select select-bordered w-full max-w-xs">
                         <option value="yes" disabled selected>Is it done?</option>
                         <option value="yes">Yes</option>
                         <option value="no">No</option>
