--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,12 +15,15 @@
                 <label class="input input-bordered flex items-center gap-2 rounded-r-none">
                     <input type="text" name="task" class="grow" placeholder="Search For Task"/>
                 </label>
-                <label class="input input-bordered flex items-center gap-2 rounded-r-none">
-                    <input type="text" name="isDone" class="grow" placeholder="Search For isDone"/>
-                </label>
-                <button type="submit" class="w-[50px] h-full bg-blue-500 px-4 py-2 rounded-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"
-                         class="w-4 h-4 opacity-70 ">
+                <label for="isDone"></label>
+                <select id="isDone" name="isDone" class="select select-bordered w-full max-w-xs rounded-none">
+                    <option value="yes" disabled selected>Is it done?</option>
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+                <button type="submit" class="w-[50px] h-full bg-blue-500 px-4 py-2 rounded-e-md">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="white"
+                         class="w-4 h-4  ">
                         <path fill-rule="evenodd"
                               d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
                               clip-rule="evenodd"/>
